# go/model_scan_app_wvs_main_status.go
@@ -1,0 +1,18 @@
+/*
+ * AWVS12 client api
+ *
+ * Awvs12 client api [http://swagger.io](http://swagger.io) or on [irc.freenode.net, #swagger](http://swagger.io/irc/). 
+ *
+ * API version: 1.0.0
+ * Contact: apiteam@swagger.io
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+// ScanAppWvsMainStatus struct for ScanAppWvsMainStatus
+type ScanAppWvsMainStatus struct {
+	Location int64 `json:"location,omitempty"`
+	AvgResponseTime int64 `json:"avg_response_time,omitempty"`
+	MaxResponseTime int64 `json:"max_response_time,omitempty"`
+	RequestCount int64 `json:"request_count,omitempty"`
+}
